<resources>
    <string name="app_name">Space App</string>
    <string name="label_next_launches">Next Launches</string>
    <string name="label_date">July 03, 2020</string>
    <string name="label_status">Success</string>
    <string name="label_number">#91</string>
    <string name="label_tittle">Details</string>
    <string name="label_description">SpaceX\'s 20th and final Crew Resupply Mission under the original NASA CRS contract, this mission brings essential supplies to the international Space Station using SpaceX\'s reusable Dragon spacecraft. it is the last scheduled flight of a Dragon 1 capsule. (CRS-21 and up under the new Commercial Resupply Services 2 contract will use Dragon 2.) The external payload for this mission is the Bartolomeo ISS external payload hosting platform. Falcon 9 and Dragon will launch from SLC-40, Cape Canaveral Air Force Station and the booster will land at LZ-1. The mission will be complete with return and recovery of the Dragon capsule and down cargo.</string>
    <string name="mock_rocket_detail">With the ability to lift into orbit over 54 metric tons (119,000 lb)--a mass equivalent to a 737 jetliner loaded with passengers, crew, luggage and fuel Falcon Heavy can lift more than twice the payload of the next closest operational vehicle, the Delta IV Heavy, at one-third the cost.</string>
    <string name="mock_falcon_heavy">Falcon Heavy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_cardView">SpaceX\'s 20th and final Crew Resupply Mission under the original NASA CRS contract, this mission brings essential supplies to the International Space Station using SpaceX\'s reusable Dragon spacecraft...</string>
    <string name="text_tittle">CRS-20</string>
    <string name="launch_date">July 03, 2020</string>
    <string name="tab_details">Details</string>
    <string name="tab_rocket">Rocket</string>
    <string name="tab_launchpad">Launchpad</string>
    <string name="view_more">VIEW MORE</string>
    <string name="label_msg_error">Erro ao carregar dados</string>
    <string name="title_activity_launchpad_details_screen">LauchpadDetailsScreenActivity</string>
    <string name="label_launch_successes">Launch Successes: 15</string>
    <string name="label_launch_attempts">Launch Attempts: 15</string>
    <string name="label_site_launch">California</string>
    <string name="label_name_launchpad">Vandenberg Air Force Base</string>
    <string name="label_launchpad">VAFB SLC 4E</string>
    <string name="tittle_card_launchpad">VAFB SLC 4E</string>
    <string name="label_type_card">Vandenberg Air Force Base</string>
    <string name="text_state">California</string>
    <string name="tittle_card_rocket">Falcon Heavy</string>
    <string name="text_card_rocket">With the ability to lift into orbit over 54 metric tons (119,000 lb)--a mass equivalent to a 737 jetliner loaded...</string>
    <string name="rocket_details_dialog_error_title">Aviso!</string>
    <string name="rocket_details_dialog_error_message">Error ao sincronizar detalhe do foguete.</string>
    <string name="title_toolbar_launch_list_activity">Space App 🚀</string>
    <string name="alert_dialog_error_tryagain_button">Try again</string>
    <string name="alert_dialog_error_title">Space App 🚀 - Error alert</string>
    <string name="alert_dialog_error_message">Error trying to get list, verify your internet connection and try again</string>
    <string name="launch_successes">Launch Successes: %d</string>
    <string name="launch_attempts">Launch Attempts: %d</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Space App 🚀</string>
    <string name="past">Past</string>
    <string name="next">Next</string>
    <string name="success_message">Success</string>
    <string name="failure_message">Failure</string>
    <string name="example_launch_name">CRS-20</string>
    <string name="example_launch_date">July 03,2020</string>
    <string name="example_launch_status">Success</string>
    <string name="fake_launch_description">SpaceX\'s 20th and final Crew Resupply Mission under the original NASA CRS contract, this mission brings essential supplies to the International Space Station using SpaceX\'s reusable Dragon spacecraft. It is the last scheduled flight of a Dragon 1 capsule. (CRS-21 and up under the new Commercial Resupply Services 2 contract will use Dragon 2.) The external payload for this mission is the Bartolomeo ISS external payload hosting platform. Falcon 9 and Dragon will launch from SLC-40, Cape Canaveral Air Force Station and the booster will land at LZ-1. The mission will be complete with return and recovery of the Dragon capsule and down cargo.</string>
    <string name="drawer_open">Aberto</string>
    <string name="drawer_close">Fechado</string>
</resources>